eks-gitops/applications/manifest/ingress/gi/argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-argocd
  namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/group.name: appsvc-argocd
    alb.ingress.kubernetes.io/subnets: subnet-05d05b14ea0a57d82,subnet-0643806a6348cd0c3,subnet-06a2313a08a8dc4a1
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
spec:
  rules:
  - host: argo.dmnd-gi-nprod.int
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /
        pathType: Prefix
