eks-gitops/applications/manifest/ingress/gi/external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: istio-external-primary-alb
  namespace: istio-system
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:476114144457:certificate/bddface0-72cd-492f-8979-60b4ea6729a4
    alb.ingress.kubernetes.io/group.name: istio-external-alb-primary
    alb.ingress.kubernetes.io/healthcheck-path: /healthz/ready
    alb.ingress.kubernetes.io/healthcheck-port: "31941"
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/load-balancer-name: istio-external-primary-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-054cc727aa30a988a,subnet-042e6b483702f11b2,subnet-05c48775df14140c8
    alb.ingress.kubernetes.io/tags: CostCenter=PokerB2B
    alb.ingress.kubernetes.io/target-type: instance
    kubernetes.io/ingress.class: alb
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: pkrb-gi-nprod-external
            port:
              number: 80
        path: /
        pathType: Prefix
  - http:
      paths:
      - backend:
          service:
            name: pkrb-gi-nprod-external
            port:
              number: 15021
        path: /healthz/ready
        pathType: Prefix
